# EigenIterators

./: .gitignore  CMakeLists.txt  README.md  common_functions.h  eigenBeginEnd.h  eigenMedian.h  main.cpp
assoc/: Entropy.h  EntropyUnitTest.cpp  KruskalWallisTest.h  similarity.h  testAssoc.h
corr/: eigenCorr.h
iter/: eigenBeginEnd.h
lm/: CMakeLists.txt  fastLm.cpp  fastLm.h
lr/: lr.cpp  lr.h
norm/: normdens.h
numDeriv/: numderiv.h
stats/: eigenMedian.h
test/: eigenUtilsTest.mk  eigenUtilsTest.project  main.cpp
time/: mytime.h
